--- a/src/options/options.css
+++ b/src/options/options.css
@@ -1,14 +1,13 @@
+html {
+    font-size: 14px;
+}
+
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    padding: 20px;
-    max-width: 800px;
     margin: 0 auto;
-    color: #333;
 }
 
 h1 {
-    border-bottom: 1px solid #eee;
+    border-bottom: 2px solid var(--primary-color);
     padding-bottom: 10px;
 }
 
@@ -17,13 +16,19 @@ button#clear {
     color: white;
     border: none;
     padding: 8px 16px;
-    border-radius: 4px;
+    border-radius: 8px;
     cursor: pointer;
     float: right;
 }
 
 button#clear:hover {
     background-color: #c82333;
+}
+
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 16px;
 }
 
 .search-container {
@@ -34,10 +39,10 @@ button#clear:hover {
 #search {
     width: 100%;
     padding: 10px;
-    font-size: 16px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 8px;
     box-sizing: border-box; /* Ensure padding doesn't affect width */
+    background-color: var(--background-color-light);
 }
 
 ul {
@@ -60,11 +65,13 @@ li {
     column-gap: 15px;
     row-gap: 4px;
     align-items: center;
+    box-shadow: 5px 6px 0px 0px var(--secondary-color);
+    margin-bottom: 16px;
 }
 
 li .title {
     font-weight: 600;
-    font-size: 1em;
+    font-size: 1rem;
     color: #222;
     line-height: 1.4;
 
@@ -78,7 +85,7 @@ li .title {
 }
 
 li .url {
-    font-size: 0.85em;
+    font-size: 0.85rem;
     color: #666;
 
     /* Single line truncation */
@@ -91,7 +98,7 @@ li .url {
 }
 
 li .actions {
-    grid-column: 2;
+    grid-column: 3;
     grid-row: 1 / span 2;
     display: flex;
     gap: 8px;
@@ -101,10 +108,10 @@ li .actions {
 .icon-btn {
     background: none;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 8px;
     cursor: pointer;
     padding: 4px 8px;
-    font-size: 0.8em;
+    font-size: 0.8rem;
     color: #555;
     transition: all 0.2s;
     display: flex;
@@ -125,7 +132,7 @@ li .actions {
 .delete-btn {
     color: #dc3545;
     border-color: #dc3545;
-    font-size: 1.1em;
+    font-size: 1.1rem;
     padding: 0 8px;
 }
 
@@ -134,13 +141,17 @@ li .actions {
     color: white;
 }
 
+.copy-btn {
+    width: 72px;
+}
+
 li .time {
-    font-size: 0.8em;
+    font-size: 0.8rem;
     color: #999;
     white-space: nowrap;
 
     /* Position in the third column, spanning both rows height */
-    grid-column: 3;
+    grid-column: 2;
     grid-row: 1 / span 2;
     align-self: center;
 }
@@ -156,7 +167,12 @@ li .time {
     color: white;
     border: none;
     padding: 8px 16px;
-    border-radius: 4px;
+    border-radius: 8px;
     cursor: pointer;
     max-height: 40px;
+}
+
+::placeholder {
+    color: #dfdaf9;
+    opacity: 1; /* Firefox */
 }
