💄 style: Body color to white

--- a/src/utils/shared.css
+++ b/src/utils/shared.css
@@ -15,7 +15,7 @@ body {
     padding: 16px;
     margin: 0;
     background-color: var(--background-color);
-    color: #dfdaf9;
+    color: white;
     box-sizing: border-box;
 }
 
