--- a/src/options/options.css
+++ b/src/options/options.css
@@ -49,6 +49,12 @@ li {
     row-gap: 4px;
     align-items: center;
     box-shadow: 5px 6px 0px 0px var(--secondary-color);
+    transition: all 0.2s;
+}
+
+li:hover {
+    transform: translateY(-2px);
+    box-shadow: 3px 4px 0px 0px var(--secondary-color);
 }
 
 li .title {
@@ -168,4 +174,10 @@ input::placeholder {
     padding: 12px 16px;
     font-size: 1rem;
     font-weight: 400;
+    box-shadow: 5px 6px 0px 0px var(--secondary-color);
+    transition: all 0.2s;
+}
+#downloadHistory:hover {
+    transform: translateY(-2px);
+    box-shadow: 3px 4px 0px 0px var(--secondary-color);
 }
